--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -5,6 +5,10 @@
   /*height: 100vh;*/
 /*}*/
 
+/deep/.modal-backdrop{
+  opacity: 1!important;
+  background-color: transparent!important;
+}
 
 
 
