--- a/client/src/app/admin/adminnavbar/adminnavbar.component.html
+++ b/client/src/app/admin/adminnavbar/adminnavbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="navbar text-center">
+<mat-toolbar class="navbar">
   <button mat-button [routerLink]="['/admindash']" ><h3><strong>TechGig Admin Panel</strong></h3></button>
   <span class="space"></span>
   <div class="tabs">
