--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -18,12 +18,9 @@
   </div>
 
   <span class="space"></span>
-  <div id="sideButton">
 
-  </div>
-
-  <!--<a class="sidemenu" data-toggle="modal" data-target="#sign"><b>Sign In</b></a><h3>|</h3>-->
-  <!--<a class="sidemenu"  data-toggle="modal" data-target="#register"><b>Register </b></a>-->
+  <a class="sidemenu" data-toggle="modal" data-target="#sign"><b>Sign In</b></a><h3>|</h3>
+  <a class="sidemenu"  data-toggle="modal" data-target="#register"><b>Register </b></a>
 </mat-toolbar>
 
 <!--------------------------------------------------LoginModal--------------------------------------------------------------->
