--- a/client/src/app/admin/admindash/admindash.component.css
+++ b/client/src/app/admin/admindash/admindash.component.css
@@ -1,4 +1,4 @@
-/deep/.modal-backdrop{
-  opacity: 1!important;
-  background-color: transparent!important;
-}
+/*/deep/.modal-backdrop{*/
+  /*opacity: 1!important;*/
+  /*background-color: transparent!important;*/
+/*}*/
