--- a/client/src/app/components/topcourses/topcourses.component.css
+++ b/client/src/app/components/topcourses/topcourses.component.css
@@ -53,7 +53,7 @@
   cursor: pointer;
 }
 .text a:visited{
-  color: #4d0026;
+  color: #15428c;
   font-weight: bolder;
   font-size: 20px;
 
@@ -72,5 +72,5 @@
   padding-top: 20px;
 }
 .category a:visited h5, h6{
-  color: #4d0026;
+  color: #15428c;
 }
